--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -39,9 +40,10 @@ dependencies {
 
     //firebase
     implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation platform('com.google.firebase:firebase-bom:26.6.0')
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-firestore:22.1.0'
-    implementation ('org.jitsi.react:jitsi-meet-sdk:2.11.0') { transitive = true }
+    implementation('org.jitsi.react:jitsi-meet-sdk:2.11.0') { transitive = true }
 
     //animation
     implementation 'com.airbnb.android:lottie:3.6.0'
